# RAMTonic

./: .gitignore  Cargo.toml  README.md  index.html  package.json  tauri.conf.json  tsconfig.json  vite.config.js
icons/: .gitkeep
src/: App.svelte  app.css  browser.rs  lib.rs  main.rs  memory.rs  process.rs  settings.rs
src/components/: BrowserList.svelte  ProcessList.svelte  ProcessStats.svelte  SearchFilter.svelte  SettingsPanel.svelte  SystemStats.svelte  Toolbar.svelte
