[package]
name = "ramtonic"
version = "0.1.0"
description = "A cross-platform desktop utility to monitor and manage memory usage for web browsers"
authors = ["Mehmet T. AKALIN"]
license = "MIT"
repository = "https://github.com/makalin/RAMTonic"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
winapi = { version = "0.3", features = ["winbase", "handleapi", "errhandlingapi", "winnt"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

